--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.3.1",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.4.5",
